--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,82 +1,89 @@
 set $mod Mod4
-set $lock
-set $menu
-set $print
-set $editor code
-set $browser google-chrome
-set $terminal gnome-terminal
+set $menu wofi
+set $browser firefox
+set $terminal foot
+set $screenshot slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
+set $background $HOME/.config/sway/background.jpg
+
+font pango:Liberation Mono 12px
 
 input * {
     xkb_layout us,ru
     xkb_options grp:caps_toggle
 }
 
-output * bg $HOME/.config/sway/background.jpg fill
+output * bg $background fill
 
-font pango:Liberation Mono 12px
-
-# Drag floating window with $mod and left mouse button, resize with right mouse button
+# Drag windows by holding down $mod+LBM, resize by holding down $mod+RMB
 floating_modifier $mod normal
 
-# Applications
-bindsym --to-code $mod+Shift+l exec $lock
-bindsym --to-code $mod+Shift+m exec $menu
-bindsym --to-code $mod+Shift+p exec $print
-bindsym --to-code $mod+Shift+e exec $editor
-bindsym --to-code $mod+Shift+b exec $browser
-bindsym --to-code $mod+Shift+t exec $terminal
+# Basics
+bindsym --to-code $mod+Return exec $terminal
+bindsym --to-code $mod+Shift+d exec $menu
+bindsym --to-code $mod+Shift+s exec $screenshot
+bindsym --to-code $mod+Shift+c reload
+bindsym --to-code $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
-# Reload config
-bindsym --to-code $mod+r reload
+# Move focus
+bindsym --to-code $mod+Left focus left
+bindsym --to-code $mod+Down focus down
+bindsym --to-code $mod+Up focus up
+bindsym --to-code $mod+Right focus right
 
-# Logout of wayland session
-bindsym --to-code $mod+l
+# Move window
+bindsym --to-code $mod+Shift+Left move left
+bindsym --to-code $mod+Shift+Down move down
+bindsym --to-code $mod+Shift+Up move up
+bindsym --to-code $mod+Shift+Right move right
 
-# Layout management and navigation
-bindsym --to-code $mod+q kill
-bindsym --to-code $mod+f fullscreen Toggle
-bindsym --to-code $mod+o floating toggle
+# Switch workspace
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
 
+# Move to workspace
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+
+# Layout
+bindsym --to-code $mod+b splith
+bindsym --to-code $mod+v splitv
 bindsym --to-code $mod+s layout stacking
 bindsym --to-code $mod+w layout tabbed
 bindsym --to-code $mod+e layout toggle split
-bindsym --to-code $mod+h splith
-bindsym --to-code $mod+v splitv
+bindsym --to-code $mod+f fullscreen
+bindsym --to-code $mod+space focus mode_toggle
+bindsym --to-code $mod+Shift+space floating toggle
+bindsym --to-code $mod+Shift+q kill
 
-bindsym $mod+Left focus left
-bindsym $mod+Right focus right
-bindsym $mod+Up focus up
-bindsym $mod+Down focus down
-
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-
+# Enable floating mode for well known window types
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="bubble"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [window_type="dialog"] floating enable
+for_window [app_id="pavucontrol"] floating enable
+
+resize {
+    bindsym  Left resize shrink width 10px
+    bindsym  Down resize grow height 10px
+    bindsym  Up resize shrink height 10px
+    bindsym  Right resize grow width 10px
+    bindsym  Return mode "default"
+    bindsym  Escape mode "default"
+}
 
 bar {
     swaybar_command waybar
