--- a/.config/sway/config
+++ b/.config/sway/config
@@ -76,14 +76,14 @@ for_window [window_role="dialog"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [app_id="pavucontrol"] floating enable
 
-resize {
-    bindsym  Left resize shrink width 10px
-    bindsym  Down resize grow height 10px
-    bindsym  Up resize shrink height 10px
-    bindsym  Right resize grow width 10px
-    bindsym  Return mode "default"
-    bindsym  Escape mode "default"
-}
+#resize {
+#    bindsym  Left resize shrink width 10px
+#    bindsym  Down resize grow height 10px
+#    bindsym  Up resize shrink height 10px
+#    bindsym  Right resize grow width 10px
+#    bindsym  Return mode "default"
+#    bindsym  Escape mode "default"
+#}
 
 bar {
     swaybar_command waybar
