--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,20 +1,26 @@
 {
   "layer": "top",
   "position": "top",
-  "margin": "20 20 0 20",
+  "margin": "0",
   "modules-left": [
-    "sway/workspaces"
+    "sway/workspaces",
   ],
   "modules-center": [],
   "modules-right": [
-    "sway/language",
     "temperature",
+    "custom/separator",
     "disk",
+    "custom/separator",
     "memory",
-    "network",
+    "custom/separator",
     "pulseaudio",
-    "tray",
-    "clock"
+    "custom/separator",
+    "network",
+    "custom/separator",
+    "sway/language",
+    "custom/separator",
+    "clock",
+    "tray"
   ],
   "sway/workspaces": {
     "disable-scroll": true,
@@ -26,12 +32,14 @@
     }
   },
   "sway/language": {
-    "format": " {}",
-    "tooltip": false
+    "format": " <span variant='smallcaps'>{}</span>",
+    "tooltip": false,
+    "min-length": 5,
+    "max-length": 5
   },
   "pulseaudio": {
     "reverse-scrolling": 1,
-    "format": "  {volume}%",
+    "format": " {volume}%",
     "format-muted": " ",
     "format-icons": {
       "default": [
@@ -44,11 +52,11 @@
     "on-click": "pavucontrol"
   },
   "disk": {
-    "format": " {percentage_used} ",
+    "format": " {percentage_used}%",
     "tooltip": false
   },
   "memory": {
-    "format": "  {percentage}%",
+    "format": " {percentage}%",
     "tooltip": false
   },
   "temperature": {
@@ -56,7 +64,7 @@
     "format": " {temperatureC}°C"
   },
   "network": {
-    "format-wifi": " {essid}",
+    "format-wifi": " {signalStrength}%",
     "format-ethernet": "",
     "format-disconnected": ""
   },
@@ -68,5 +76,8 @@
     "timezone": "Europe/Moscow",
     "format": "{:%a %d %b %H:%M}",
     "tooltip": false
+  },
+  "custom/separator": {
+    "format": "|",
   }
 }
