--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,13 +1,21 @@
 set $mod Mod4
-set $menu wofi
+set $menu wofi --show run
 set $browser firefox
 set $terminal foot
 set $screenshot slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 set $background $HOME/.config/sway/background.jpg
 
+exec nm-applet --indicator
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
-font pango:Liberation Mono 12px
+font pango:Victor Mono 12px
+
+default_border pixel 2
+default_floating_border pixel 2
+client.focused          #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2
+client.focused_inactive #ffb86c #ffb86c #ffb86c #ffb86c #ffb86c
+client.unfocused        #ffb86c #ffb86c #ffb86c #ffb86c #ffb86c
+client.urgent           #ff5555 #ff5555 #ff5555 #ff5555 #ff5555
 
 input * {
     xkb_layout us,ru
@@ -23,6 +31,7 @@ floating_modifier $mod normal
 bindsym --to-code $mod+Return exec $terminal
 bindsym --to-code $mod+Shift+d exec $menu
 bindsym --to-code $mod+Shift+s exec $screenshot
+bindsym --to-code $mod+Shift+b exec $browser
 bindsym --to-code $mod+Shift+c reload
 bindsym --to-code $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
@@ -77,6 +86,9 @@ for_window [window_role="bubble"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [app_id="pavucontrol"] floating enable
+
+# Disable window titles
+for_window [class=".*"] title_format ""
 
 #resize {
 #    bindsym  Left resize shrink width 10px
