--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -9,6 +9,10 @@
   "modules-center": [
   ],
   "modules-right": [
+    "custom/vpn",
+    "custom/separator",
+    "custom/weather",
+    "custom/separator",
     "temperature",
     "custom/separator",
     "disk",
@@ -31,7 +35,7 @@
       "2": [],
       "3": [],
       "4": []
-    }
+    },
   },
   "sway/language": {
     "format": " <span variant='smallcaps'>{}</span>",
@@ -74,7 +78,7 @@
   },
   "temperature": {
     "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
-    "format": " {temperatureC}°C"
+    "format": " {temperatureC}°"
   },
   "network": {
     "format-wifi": " {signalStrength}%",
@@ -82,8 +86,8 @@
     "format-disconnected": ""
   },
   "tray": {
-    "icon-size": 16,
-    "spacing": 2
+    "icon-size": 18,
+    "spacing": 8
   },
   "clock": {
     "timezone": "Europe/Moscow",
@@ -91,6 +95,18 @@
     "tooltip": false
   },
   "custom/separator": {
-    "format": "|",
+    "format": "|"
+  },
+  "custom/weather": {
+    "format": "{}",
+    "interval": 3600,
+    "exec": "$HOME/.config/waybar/weather 2> /dev/null",
+    "return-type": "json"
+  },
+  "custom/vpn": {
+    "format": "{}",
+    "exec": "$HOME/.config/waybar/vpn 2> /dev/null",
+    "return-type": "json"
   }
 }
+
