--- a/.config/sway/config
+++ b/.config/sway/config
@@ -9,6 +9,7 @@ exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DE
 
 font pango:Victor Mono 12px
 
+hide_edge_borders smart
 default_border pixel 2
 default_floating_border pixel 2
 client.focused          #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2
@@ -21,7 +22,7 @@ input * {
     xkb_options grp:caps_toggle
 }
 
-output * bg #44475a solid_color
+output * bg #282a36 solid_color
 
 # Drag windows by holding down $mod+LBM, resize by holding down $mod+RMB
 floating_modifier $mod normal
@@ -88,6 +89,7 @@ for_window [window_role="bubble"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [app_id="pavucontrol"] floating enable
+for_window [app_id="telegram-desktop*"] floating enable
 
 # Disable window titles
 for_window [class=".*"] title_format ""
@@ -105,6 +107,3 @@ bar {
     swaybar_command waybar
 }
 
-# White      #d4e0ee / text #3E4F56
-# Pink light #ffdcdc / text #3E4F56
-# Pink dark  #ffa7a6 / 
