--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,8 +2,8 @@
   "layer": "top",
   "position": "top",
   "margin": "0",
-  "modules-left": ["sway/workspaces", "mpris"],
-  "modules-center": [],
+  "modules-left": ["sway/workspaces"],
+  "modules-center":  ["mpris"],
   "modules-right": ["group/audio", "group/hardware", "group/network", "clock", "tray"],
 
   "group/audio": {
@@ -18,7 +18,7 @@
 
   "group/network": {
     "orientation": "horizontal",
-    "modules": ["network"]
+    "modules": ["network",  "network#vpn"]
   },
 
   "sway/workspaces": {
@@ -83,9 +83,17 @@
   },
 
   "network": {
+    "interface": "wlxe*",
     "format-wifi": "  {essid} {signalStrength}%",
-    "format-ethernet": "",
-    "format-disconnected": ""
+    "format-disconnected": "",
+    "tooltip": false
+  },
+
+  "network#vpn": {
+    "interface": "tun0",
+    "format": " Work",
+    "format-disconnected": "",
+    "tooltip": false
   },
 
   "tray": {
@@ -97,12 +105,6 @@
     "timezone": "Europe/Moscow",
     "format": "{:%a %d %b %H:%M}",
     "tooltip": false
-  },
-
-  "custom/vpn": {
-    "format": "{}",
-    "exec": "$HOME/.config/waybar/vpn 2> /dev/null",
-    "return-type": "json"
   }
 }
 
