--- a/.config/sway/config
+++ b/.config/sway/config
@@ -2,14 +2,12 @@ set $mod Mod4
 set $menu wofi --show run
 set $browser google-chrome
 set $terminal foot
-set $screenshot slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
+set $print slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 
 exec nm-applet --indicator
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
 font pango:Victor Mono 12px
-
-hide_edge_borders smart
 default_border pixel 2
 default_floating_border pixel 2
 client.focused          #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2
@@ -17,23 +15,19 @@ client.focused_inactive #ffb86c #ffb86c #ffb86c #ffb86c #ffb86c
 client.unfocused        #ffb86c #ffb86c #ffb86c #ffb86c #ffb86c
 client.urgent           #ff5555 #ff5555 #ff5555 #ff5555 #ff5555
 
-input * {
-    xkb_layout us,ru
-    xkb_options grp:caps_toggle
-}
-
+input * xkb_layout us,ru
+input * xkb_options grp:caps_toggle,grp_led:caps
 output * bg #282a36 solid_color
 
 # Drag windows by holding down $mod+LBM, resize by holding down $mod+RMB
 floating_modifier $mod normal
 
 # Basics
+bindsym --to-code Print exec $print
 bindsym --to-code $mod+Return exec $terminal
-bindsym --to-code $mod+Shift+d exec $menu
-bindsym --to-code $mod+Shift+s exec $screenshot
+bindsym --to-code $mod+grave exec $menu
 bindsym --to-code $mod+Shift+b exec $browser
 bindsym --to-code $mod+Shift+c reload
-bindsym --to-code $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
 # Move focus
 bindsym --to-code $mod+Left focus left
@@ -48,6 +42,7 @@ bindsym --to-code $mod+Shift+Up move up
 bindsym --to-code $mod+Shift+Right move right
 
 # Switch workspace
+bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
 bindsym $mod+3 workspace number 3
@@ -80,8 +75,13 @@ bindsym --to-code $mod+space focus mode_toggle
 bindsym --to-code $mod+Shift+space floating toggle
 bindsym --to-code $mod+Shift+q kill
 
-bindsym --to-code $mod+i move container to scratchpad
-bindsym --to-code $mod+o scratchpad show
+bindsym --to-code $mod+Shift+minus move scratchpad
+bindsym --to-code $mod+minus scratchpad show
+
+# Multimedia
+bindsym --to-code XF86AudioPlay exec playerctl play-pause
+bindsym --to-code XF86AudioPrev exec playerctl previous
+bindsym --to-code XF86AudioNext exec playerctl next
 
 # Enable floating mode for well known window types
 for_window [window_role="pop-up"] floating enable
@@ -89,19 +89,8 @@ for_window [window_role="bubble"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [app_id="pavucontrol"] floating enable
-for_window [app_id="telegram-desktop*"] floating enable
-
-# Disable window titles
-for_window [class=".*"] title_format ""
-
-#resize {
-#    bindsym  Left resize shrink width 10px
-#    bindsym  Down resize grow height 10px
-#    bindsym  Up resize shrink height 10px
-#    bindsym  Right resize grow width 10px
-#    bindsym  Return mode "default"
-#    bindsym  Escape mode "default"
-#}
+for_window [app_id="telegram-desktop_telegram-desktop"] floating enable
+for_window [app_id="google-chrome"] border none
 
 bar {
     swaybar_command waybar
