--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+unbind-key C-b
+set -g prefix C-s
 set -g default-terminal "screen-256color"
 set -g mouse on
 set -g escape-time 10
@@ -13,4 +15,6 @@ set -g renumber-windows on
 
 set -g set-titles on
 
-
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
