--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,7 +1,7 @@
 [main]
 title=Terminal
 term=foot
-font=Victor Mono:size=14
+font=Victor Mono:size=18
 pad=5x5
 
 [environment]
@@ -19,26 +19,25 @@ selection-background=44475a
 selection-foreground=ffffff
 
 ## Normal/regular colors (color palette 0-7)
-regular0=21222c  # black
-regular1=ff5555  # red
-regular2=50fa7b  # green
-regular3=f1fa8c  # yellow
-regular4=bd93f9  # blue
-regular5=ff79c6  # magenta
-regular6=8be9fd  # cyan
-regular7=f8f8f2  # white
+regular0=2d3240  # black
+regular1=af4b57  # red
+regular2=93b279  # green
+regular3=e5c178  # yellow
+regular4=6f8eb3  # blue
+regular5=a3799c  # magenta
+regular6=77b3c5  # cyan
+regular7=dfe3ed  # white
 
 ## Bright colors (color palette 8-15)
-bright0=6272a4   # bright black
-bright1=ff6e6e   # bright red
-bright2=69ff94   # bright green
-bright3=ffffa5   # bright yellow
-bright4=d6acff   # bright blue
-bright5=ff92df   # bright magenta
-bright6=a4ffff   # bright cyan
+bright0=3b4356   # bright black
+bright1=af4b57   # bright red
+bright2=93b279   # bright green
+bright3=e5c178   # bright yellow
+bright4=6f8eb3   # bright blue
+bright5=a3799c   # bright magenta
+bright6=7fafad   # bright cyan
 bright7=ffffff   # bright white
 
 [key-bindings]
 clipboard-copy=Control+Shift+c XF86Copy
 clipboard-paste=Control+Shift+v XF86Paste
-
