--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,99 +1,103 @@
-set $mod Mod4
 set $menu wofi --show run
-set $browser google-chrome
 set $terminal foot
 set $print slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 
-exec nm-applet --indicator
-#exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
-
-font pango:Victor Mono 12px
-default_border pixel 2
-default_floating_border pixel 2
-client.focused          #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2 #f8f8f2
-client.focused_inactive #ffb86c #ffb86c #ffb86c #ffb86c #ffb86c
-client.unfocused        #ffb86c #ffb86c #ffb86c #ffb86c #ffb86c
+font pango:Victor Mono 16px
+default_border pixel 1
+default_floating_border pixel 1
+client.focused          #e5c178 #e5c178 #282a36 #e5c178 #e5c178
+client.focused_inactive #282a36 #f8f8f2 #282a36 #282a36 #282a36
+client.unfocused        #282a36 #f8f8f2 #282a36 #282a36 #282a36
 client.urgent           #ff5555 #ff5555 #ff5555 #ff5555 #ff5555
 
+seat * xcursor_theme Adwaita 24
 input * xkb_layout us,ru
 input * xkb_options grp:caps_toggle,grp_led:caps
 output * bg #282a36 solid_color
 
-# Drag windows by holding down $mod+LBM, resize by holding down $mod+RMB
-floating_modifier $mod normal
+# Drag windows by holding down Mod4+LBM, resize by holding down Mod4+RMB
+floating_modifier Mod4 normal
 
 # Basics
 bindsym --to-code Print exec $print
-bindsym --to-code $mod+Return exec $terminal
-bindsym --to-code $mod+grave exec $menu
-bindsym --to-code $mod+Shift+b exec $browser
-bindsym --to-code $mod+Shift+c reload
+bindsym --to-code Mod4+Return exec $terminal
+bindsym --to-code Mod4+grave exec $menu
+bindsym --to-code Mod4+Shift+c reload
+bindsym --to-code Mod4+l exec swaylock
 
 # Move focus
-bindsym --to-code $mod+Left focus left
-bindsym --to-code $mod+Down focus down
-bindsym --to-code $mod+Up focus up
-bindsym --to-code $mod+Right focus right
+bindsym --to-code Mod4+Left focus left
+bindsym --to-code Mod4+Down focus down
+bindsym --to-code Mod4+Up focus up
+bindsym --to-code Mod4+Right focus right
 
 # Move window
-bindsym --to-code $mod+Shift+Left move left
-bindsym --to-code $mod+Shift+Down move down
-bindsym --to-code $mod+Shift+Up move up
-bindsym --to-code $mod+Shift+Right move right
+bindsym --to-code Mod4+Shift+Left move left
+bindsym --to-code Mod4+Shift+Down move down
+bindsym --to-code Mod4+Shift+Up move up
+bindsym --to-code Mod4+Shift+Right move right
 
 # Switch workspace
-bindsym $mod+Tab workspace back_and_forth
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
+bindsym Mod4+Tab workspace back_and_forth
+bindsym Mod4+1 workspace number 1
+bindsym Mod4+2 workspace number 2
+bindsym Mod4+3 workspace number 3
+bindsym Mod4+4 workspace number 4
+bindsym Mod4+5 workspace number 5
+bindsym Mod4+6 workspace number 6
+bindsym Mod4+7 workspace number 7
+bindsym Mod4+8 workspace number 8
+bindsym Mod4+9 workspace number 9
 
 # Move to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
+bindsym Mod4+Shift+1 move container to workspace number 1
+bindsym Mod4+Shift+2 move container to workspace number 2
+bindsym Mod4+Shift+3 move container to workspace number 3
+bindsym Mod4+Shift+4 move container to workspace number 4
+bindsym Mod4+Shift+5 move container to workspace number 5
+bindsym Mod4+Shift+6 move container to workspace number 6
+bindsym Mod4+Shift+7 move container to workspace number 7
+bindsym Mod4+Shift+8 move container to workspace number 8
+bindsym Mod4+Shift+9 move container to workspace number 9
 
 # Layout
-bindsym --to-code $mod+b splith
-bindsym --to-code $mod+v splitv
-bindsym --to-code $mod+s layout stacking
-bindsym --to-code $mod+w layout tabbed
-bindsym --to-code $mod+e layout toggle split
-bindsym --to-code $mod+f fullscreen
-bindsym --to-code $mod+space focus mode_toggle
-bindsym --to-code $mod+Shift+space floating toggle
-bindsym --to-code $mod+Shift+q kill
+bindsym --to-code Mod4+b splith
+bindsym --to-code Mod4+v splitv
+bindsym --to-code Mod4+s layout stacking
+bindsym --to-code Mod4+w layout tabbed
+bindsym --to-code Mod4+e layout toggle split
+bindsym --to-code Mod4+f fullscreen
+bindsym --to-code Mod4+space focus mode_toggle
+bindsym --to-code Mod4+Shift+space floating toggle
+bindsym --to-code Mod4+Shift+q kill
 
-bindsym --to-code $mod+Shift+minus move scratchpad
-bindsym --to-code $mod+minus scratchpad show
+bindsym --to-code Mod4+Shift+minus move scratchpad
+bindsym --to-code Mod4+minus scratchpad show
 
 # Multimedia
-bindsym --to-code XF86AudioPlay exec playerctl play-pause
-bindsym --to-code XF86AudioPrev exec playerctl previous
-bindsym --to-code XF86AudioNext exec playerctl next
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume u/DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume u/DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec pactl set-sink-mute u/DEFAULT_SINK@ toggle
 
 # Enable floating mode for well known window types
+for_window [class="steam*"] floating enabled
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="bubble"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [app_id="pavucontrol"] floating enable
-for_window [app_id="telegram-desktop_telegram-desktop"] floating enable
+for_window [app_id="org.telegram.desktop"] border none
 for_window [app_id="google-chrome"] border none
+for_window [app_id="code"] title_format "<span foreground='white'>%title</span>"
 
 bar {
     swaybar_command waybar
 }
 
 include /etc/sway/config.d/*
+
+exec swayidle -w
+
